--- a/AutoCodeConfig.yaml
+++ b/AutoCodeConfig.yaml
@@ -25,8 +25,10 @@ generators:
   matches: []
 - type: "DDOS"
   assertions:
+  - "@StatusCode != 200"
   - "@StatusCode != 401"
   - "@StatusCode != 404"
+  - "@StatusCode != 500"
   severity: "Critical"
   database: null
   inactive: false
@@ -52,7 +54,9 @@ generators:
 - type: "sql_injection_timebound"
   assertions:
   - "@ResponseTime < 7000"
+  - "@StatusCode != 401"
   - "@StatusCode != 404"
+  - "@StatusCode != 500"
   severity: "Critical"
   database:
     name: "MySQL"
@@ -110,8 +114,10 @@ generators:
     bodyProperties: null
 - type: "invalid_datatype"
   assertions:
+  - "@StatusCode != 200"
   - "@StatusCode != 401"
   - "@StatusCode != 404"
+  - "@StatusCode != 500"
   severity: "Critical"
   database: null
   inactive: false
@@ -148,8 +154,10 @@ generators:
   matches: []
 - type: "negative_number"
   assertions:
+  - "@StatusCode != 200"
   - "@StatusCode != 401"
   - "@StatusCode != 404"
+  - "@StatusCode != 500"
   severity: "Critical"
   database: null
   inactive: false
